entered my projects

--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Daniel Mutai</title>
     <link rel="stylesheet" href="css/style.css">
+    <a href="index.html">THE BEGINING</a>
+    <a href="projects.html">MY PROJECTS</a>
   </head>
   <body>
     <h2>MY BACKGROUND</h2>
@@ -18,11 +20,11 @@
       <li>travelling</li>
     </ul>
     <h3>my skills</h3>
-    <ol>
+    <ul>
       <li>art</li>
       <li>arithmetics</li>
-      
-    </ol>
+
+    </ul>
 
 
   </body>
