--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,20 @@
     <meta charset="utf-8">
     <title>Daniel Mutai</title>
     <link rel="stylesheet" href="css/style.css">
+    <a href="about.html">ABOUT ME</a>
+    <a href="index.html">THE BEGINING</a>
   </head>
   <body>
+    <h2>MY PROJECTS IN SCHOOL</h2>
+    <img src="img/code.jpg" alt="keep calm and code">
+    <p>after joining moringa i have had a chance to do the following projects:</p><br>
+
+    <ol>
+      <li><a href="https://github.com/damunza/my-first-webpage.git">my first webpage</a>-this was my first lesson where i learnt to create a webpage </li>
+      <li><a href="https://github.com/damunza/petwebsite.git">my first assignment</a>-after learning to create a website i had my own attempt at creating a website without assistance from thr team manager.It was ting but i did it </li>
+      <li><a href="https://github.com/damunza/application.git">learning collaboration</a>- while reading through the contact my peer and i discovered how to work on a single project then make it a collaboration. it took a few trials but once i succeded this is what was created </li>
+      <li><a href="https://github.com/emdeechege/resort.git">my first collaboration</a>-after succeeding in creating the first collaboration i went ahead to practice by partnering again with my pair to make a new collaboration.</li>
+    </ol>
 
   </body>
 </html>
