--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>Daniel Mutai</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="one">
 
     <h1>Daniel Mutai</h1>
     <img src="img/me.jpg" alt="car pic"><br><br>
     <div class="benz" align="centre">
-      <a href="about.html">ABOUT ME</a>
+      <a href="about.html">ABOUT ME</a>|
       <a href="projects.html">MY PROJECTS</a>
 
     </div>
