--- a/projects.html
+++ b/projects.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>Daniel Mutai</title>
     <link rel="stylesheet" href="css/style.css">
-    <a href="about.html">ABOUT ME</a>
+    <a href="about.html">ABOUT ME</a>|
     <a href="index.html">THE BEGINING</a>
   </head>
   <body>
     <h2>MY PROJECTS IN SCHOOL</h2>
-    <img src="img/code.jpg" alt="keep calm and code">
+    <img src="img/code.jpg" alt="keep calm and code" class="four">
     <p>after joining moringa i have had a chance to do the following projects:</p><br>
 
     <ol>
