--- a/about.html
+++ b/about.html
@@ -4,12 +4,19 @@
     <meta charset="utf-8">
     <title>Daniel Mutai</title>
     <link rel="stylesheet" href="css/style.css">
-    <a href="index.html">THE BEGINING</a>
+    <div class="menu" align="centre">
+      
+    <a href="index.html">THE BEGINING</a>|
     <a href="projects.html">MY PROJECTS</a>
+      </div>
   </head>
-  <body>
+  <body class="two">
     <h2>MY BACKGROUND</h2>
     <p>I am Daniel Mutai. Born to a family of agriculturalists and humanitarians i have had an out door growth experience. Most times i would be out playing with machines and trying to fix broken ones ;its funny that eventhough i was unable to fix them i actually developed deep intrest in them.i studiesd in middle class schools all my life and took up technical subjects in school every time i got an opportunity </p><br><br>
+
+    <div class="three">
+
+
 
     <h3>my hobbies</h3>
     <ul>
@@ -25,6 +32,7 @@
       <li>arithmetics</li>
 
     </ul>
+  </div>
 
 
   </body>
