--- a/projects.html
+++ b/projects.html
@@ -7,10 +7,10 @@
     <a href="about.html">ABOUT ME</a>|
     <a href="index.html">THE BEGINING</a>
   </head>
-  <body>
+  <body class="five">
     <h2>MY PROJECTS IN SCHOOL</h2>
-    <img src="img/code.jpg" alt="keep calm and code" class="four">
-    <p>after joining moringa i have had a chance to do the following projects:</p><br>
+
+    <p><strong>after joining moringa i have had a chance to do the following projects:</strong></p><br>
 
     <ol>
       <li><a href="https://github.com/damunza/my-first-webpage.git">my first webpage</a>-this was my first lesson where i learnt to create a webpage </li>
@@ -18,6 +18,6 @@
       <li><a href="https://github.com/damunza/application.git">learning collaboration</a>- while reading through the contact my peer and i discovered how to work on a single project then make it a collaboration. it took a few trials but once i succeded this is what was created </li>
       <li><a href="https://github.com/emdeechege/resort.git">my first collaboration</a>-after succeeding in creating the first collaboration i went ahead to practice by partnering again with my pair to make a new collaboration.</li>
     </ol>
-
+<img src="img/code.jpg" alt="keep calm and code" class="four">
   </body>
 </html>
