--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Daniel Mutai</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body class="one">
 
-    <h1>Daniel Mutai</h1>
-    <img src="img/me.jpg" alt="car pic"><br><br>
-    <div class="benz" align="centre">
-      <a href="about.html">ABOUT ME</a>|
-      <a href="projects.html">MY PROJECTS</a>
+<head>
+  <meta charset="utf-8">
+  <title>Daniel Mutai</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-    </div>
+<body class="one">
+
+  <h1>Daniel Mutai</h1>
+  <img src="img/me.jpg" alt="car pic"><br><br>
+  <div class="benz" align="centre">
+    <a href="about.html">ABOUT ME</a>| |
+    <a href="projects.html">MY PROJECTS</a>||
+    <a href="README.md">README</a>
+
+  </div>
 
 
 
-  </body>
+</body>
+
 </html>
