--- a/about.html
+++ b/about.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Daniel Mutai</title>
-    <link rel="stylesheet" href="css/style.css">
-    <div class="menu" align="centre">
-      
-    <a href="index.html">THE BEGINING</a>|
-    <a href="projects.html">MY PROJECTS</a>
-      </div>
-  </head>
-  <body class="two">
-    <h2>MY BACKGROUND</h2>
-    <p>I am Daniel Mutai. Born to a family of agriculturalists and humanitarians i have had an out door growth experience. Most times i would be out playing with machines and trying to fix broken ones ;its funny that eventhough i was unable to fix them i actually developed deep intrest in them.i studiesd in middle class schools all my life and took up technical subjects in school every time i got an opportunity </p><br><br>
 
-    <div class="three">
+<head>
+  <meta charset="utf-8">
+  <title>Daniel Mutai</title>
+  <link rel="stylesheet" href="css/style.css">
+  <div class="menu" align="centre">
+
+    <a href="index.html">THE BEGINING</a>| |
+    <a href="projects.html">MY PROJECTS</a>
+  </div>
+</head>
+
+<body class="two">
+  <h2>MY BACKGROUND</h2>
+  <p>I am Daniel Mutai. Born to a family of agriculturalists and humanitarians i have had an out door growth experience. Most times i would be out playing with machines and trying to fix broken ones ;its funny that eventhough i was unable to fix them i actually
+    developed deep intrest in them.i studiesd in middle class schools all my life and took up technical subjects in school every time i got an opportunity </p><br><br>
+
+  <div class="three">
 
 
 
@@ -35,5 +38,6 @@
   </div>
 
 
-  </body>
+</body>
+
 </html>
