--- a/projects.html
+++ b/projects.html
@@ -11,11 +11,11 @@
 </head>
 
 <body class="five">
-  <h2>MY PROJECTS IN SCHOOL</h2>
+  <h2 class="six">MY PROJECTS IN SCHOOL</h2>
 
-  <p><strong>after joining moringa i have had a chance to do the following projects:</strong></p><br>
+  <p class="six"><strong>after joining moringa i have had a chance to do the following projects:</strong></p><br>
 
-  <ol>
+  <ol class="six">
     <li><a href="https://github.com/damunza/my-first-webpage.git">my first webpage</a>-this was my first lesson where i learnt to create a webpage </li>
     <li><a href="https://github.com/damunza/petwebsite.git">my first assignment</a>-after learning to create a website i had my own attempt at creating a website without assistance from thr team manager.It was ting but i did it </li>
     <li><a href="https://github.com/damunza/application.git">learning collaboration</a>- while reading through the contact my peer and i discovered how to work on a single project then make it a collaboration. it took a few trials but once i succeded this
