--- a/about.html
+++ b/about.html
@@ -14,8 +14,7 @@
 
 <body class="two">
   <h2>MY BACKGROUND</h2>
-  <p>I am Daniel Mutai. Born to a family of agriculturalists and humanitarians i have had an out door growth experience. Most times i would be out playing with machines and trying to fix broken ones ;its funny that eventhough i was unable to fix them i actually
-    developed deep intrest in them.i studiesd in middle class schools all my life and took up technical subjects in school every time i got an opportunity </p><br><br>
+  <p>I am Daniel Mutai. Born to a family of agriculturalists and humanitarians I have had an out door growth experience. Most times I would be out playing with machines and trying to fix broken ones ;its funny that eventhough i was unable to fix them i actually developed deep intrest in them.I studied in middle class schools all my life and took up technical subjects in school every time I got an opportunity </p><br><br>
 
   <div class="three">
 
